fix: system tray for linux + snapcraft.yml